<resources>
    <string name="app_name">智能理货</string>
    <string name="voyage_download">航次下载</string>
    <string name="vayage_downloaded">已下载航次</string>
    <string name="full_statistics">全统计</string>
    <string name="single_statistics">个统计</string>
    <string name="container_no_search">箱号搜索</string>


    <string name="clear_cache">清除缓存</string>
    <string name="net">网络</string>
    <string name="download">下载</string>
    <string name="upload">上传</string>
    <string name="bay">贝位图</string>
    <string name="baynum">贝号</string>
    <string name="last_bay">上一贝</string>
    <string name="next_bay">下一贝</string>
    <string name="up_bay">放大贝</string>
    <string name="down_bay">缩小贝</string>
    <string name="refresh_bay">刷新</string>
    <string name="query_Container_no">查询</string>
    <string name="search_title">搜索</string>
    <string name="double_lift">双吊</string>
    <string name="move_bay">调贝</string>
    <string name="search_hint">输入查询箱号</string>
    <string name="search_hint1">输入查询箱号1</string>
    <string name="search_hint2">输入查询箱号2</string>
    <string name="search_hint_bayno">输入目标贝位号</string>

    <string name="data_loading">数据下载中...</string>
    <string name="not_selected">未选中</string>
    <string name="download_success">下载成功</string>
    <string name="not_download">未下载</string>
    <string name="clear_success">清除成功</string>
    <string name="hint_input_bay_number_text">选择或输入一个目标贝号</string>
    <string name="upload_success">上传成功</string>
    <string name="upload_failure">上传失败</string>
    <string name="not_upload_complete">未上传完整</string>
    <string name="not_move">无移贝操作</string>

    <string name="end_bay_number_text">目标贝号</string>
    <string name="hint_input_end_bay_number_text">输入目标贝号</string>

    <string name="mismatching_container_bayno">目标贝位号与待调箱子尺寸不匹配</string>
    <string name="mismatching_container_size_con">待调箱子尺寸不匹配</string>
    <string name="repeat_bayno">目标贝位号与源贝位号重复</string>
    <string name="error_bayno">错误贝位号</string>
    <string name="repeat_container_no">重复箱号</string>
    <string name="error_container_no">错误箱号</string>
    <string name="exist_container">已存在箱子</string>
    <string name="not_match_container">箱子尺寸不匹配</string>
    <string name="name_wait_move_bay_text">待移动贝位信息</string>
    <string name="bay_num_select">贝号选择</string>

    <string name="title_general">普通</string>
    <string name="title_moved">捣箱</string>
    <string name="voyage_select">航次选择</string>
    <string name="title_activity_container_no_query">ContainerNoQueryActivity</string>

    <string name="error_field_required">请求失败，请检查网络</string>
    <string name="upload_error_field_required">上传失败，请检查网络</string>
    <string name="download_error_field_required">下载失败，请检查网络</string>
    <string name="not_search_container_no">未找到相关箱号</string>
    <string name="error_container_no_and_bay">此箱号船图数据有误，请重新下载航次</string>

    <string name="button_submit">提交</string>
    <string name="info_incomplete">信息不完整</string>

    <string name="refuse_pmission">你拒绝了此权限，如需安装更新请打开此权限</string>
</resources>
